--- a/books.html
+++ b/books.html
@@ -29,7 +29,6 @@
 
     <nav id="site-nav"></nav>
     <script src="assets/js/ui/nav.js"></script>
-    <script src="assets/js/ui/responsive.js"></script>
 
      <header class="intro-container courses">
       <div class="title-container courses">
@@ -230,12 +229,14 @@
           </div>
         </aside>
 
-        <div class="course-grid" id="course-list"></div>
+        <div class="course-grid" id="books-list"></div>
       </div>
     </section>
    
+    <script src="assets/js/ui/responsive.js"></script>
 
     <script src="assets/js/data/books.js"></script>
+    <script src="assets/js/ui/menu-filters.js"></script>
     <script src="assets/js/books.js"></script>
 
 </body>
