--- a/courses.html
+++ b/courses.html
@@ -45,7 +45,6 @@
         loop
         playsinline
       ></video>
-
     </header>
 
     <section class="courses-page" id="choose-category">
@@ -235,6 +234,7 @@
     </section>
 
     <script src="assets/js/data/courses.js"></script>
+    <script src="assets/js/ui/menu-filters.js"></script>
     <script src="assets/js/courses.js"></script>
   </body>
 </html>
