--- a/team.html
+++ b/team.html
@@ -24,10 +24,101 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="team-page">
     <!--nav same for every page-->
     <nav id="site-nav"></nav>
     <script src="assets/js/ui/nav.js"></script>
     <!--nav-->
+    <header class="about-us-header">
+      <h1>About Us</h1>
+      <div class="tag-row">
+        <div class="tag">Meet</div>
+        <div class="tag">Our</div>
+        <div class="tag">Team</div>
+      </div>
+      <div class="team-people-row">
+        <div class="line"></div>
+        <div class="person"></div>
+        <div class="person"></div>
+
+        <div class="line"></div>
+      </div>
+    </header>
+    <section class="team-presentation">
+      <div class="team-presentation-box">
+        <div class="team-know-us-intro">
+          <h2>Liga logia gia tin omada mas</h2>
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui
+            blanditiis praesentium voluptatum deleniti atque corrupti quos
+            dolores et quas molestias excepturi sint occaecati cupiditate non
+            provident, similique sunt in culpa qui officia deserunt mollitia
+            animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis
+            est et expedita distinctio.
+          </p>
+        </div>
+
+        <div class="team-personal-info">
+          <div class="team-info-box">
+            <h3>Ta meli mas</h3>
+            <p>Akolouthoun ta stoixeia mas</p>
+          </div>
+
+          <div class="line"></div>
+          <div class="team-info-box">
+            <h3>Napoleon Haralampidis</h3>
+            <h4>Am 33333333</h4>
+            <h4>p3220@aueb.gr</h4>
+            <h4>Etos Spoudon: 4o</h4>
+          </div>
+
+          <div class="line"></div>
+
+          <div class="team-info-box">
+            <h3>Eleni Tzeliou</h3>
+            <p>Am 33333333</p>
+            <h4>p3220@aueb.gr</h4>
+            <h4>Etos Spoudon: 4o</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="team-presentation-image-wrapper">
+        <div class="team-pres-img-box">
+          <img src="/assets/images/ασσοε.jpg" alt="" />
+        </div>
+        <div class="team-pres-img-box">
+          <img src="/assets/images/assoe2.avif" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="team-project-description-wrapper">
+      <div class="team-project-dcr-box">
+        <div class="team-project-dscr-title-box">
+          <h2>
+            It is a long established fact that a reader will be distracted by
+            the readable content.
+          </h2>
+        </div>
+        <div class="team-project-main-dsc">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. <br><br>
+             Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <div class="team-proj-img-row">
+            <div class="team-proj-box-img">
+              <img src="assets/images/opa-logo.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
