--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
 
           <div class="team-info-box">
             <h3>Eleni Tzeliou</h3>
-            <p>AM: 33333333</p>
+            <h4>AM: 33333333</h4>
             <h4>Email: p333220@aueb.gr</h4>
             <h4>Study Year: 4o</h4>
           </div>
@@ -107,11 +107,12 @@
             find courses, recommended books, and selected videos in one
             place—grouped by category and difficulty level. Each section
             includes clear descriptions and key details, so you know what you
-            will learn before you start. <br><br>Our goal is to provide an environment
-            that genuinely supports Informatics students: fast navigation, easy
-            filtering, curated recommendations, and clean presentation of
-            resources. This way, you can follow a steady study plan, revise
-            effectively for exams, and build your knowledge step by step.
+            will learn before you start. <br /><br />Our goal is to provide an
+            environment that genuinely supports Informatics students: fast
+            navigation, easy filtering, curated recommendations, and clean
+            presentation of resources. This way, you can follow a steady study
+            plan, revise effectively for exams, and build your knowledge step by
+            step.
           </p>
           <div class="team-proj-img-row">
             <div class="team-proj-box-img">
@@ -125,10 +126,8 @@
     <footer id="site-footer"></footer>
     <!--Used scripts-->
 
-    <script src="assets/js/ui/common/menu.js"></script>
-    <script src="assets/js/ui/common/menu.js"></script>
-    <script src="assets/js/ui/common/footer.js"></script>
-    <script src="assets/js/ui/common/footer-accordion.js"></script>
+    <script src="assets/js/ui/common/shared-layout.js"></script>
+
 
     <script src="assets/js/data/categories.js"></script>
 
