--- a/course-details.html
+++ b/course-details.html
@@ -48,41 +48,37 @@
         and achieve.
       </h2>
 
-      <div class="course-modules-wrapper">
-        <div class="course-module">
-          <div class="module-header">
-            <h3>Dummy title of the module</h3>
-            <span>01</span>
+      <section class="course-section" id="course___section">
+        <!-- inject more course-module here via js-->
+
+        <!-- inject more course-modules-wrapper here -->
+      </section>
+
+      <section class="course__more__details">
+        <div class="course__proposed__book__sec">
+          <div class="__proposed__books_title">
+            <h1>Extend your knowledge</h1>
+            <p>Here are a few books we recommend for this course.</p>
           </div>
-          <p>
-            It's a jumble of Latin words that looks like real text but is
-            intentionally nonsensical, allowing designers to focus on the
-            aesthetics.
-          </p>
-        </div>
-        <div class="course-module">
-          <div class="module-header">
-            <h3>Dummy title of the module</h3>
-            <span>01</span>
+
+          <div class="__proposed__books__main" id="proposed__bks">
+            <!--inject the proposed books here!
+            
+            -->
           </div>
-          <p>
-            It's a jumble of Latin words that looks like real text but is
-            intentionally nonsensical, allowing designers to focus on the
-            aesthetics.
-          </p>
         </div>
-        <div class="course-module">
-          <div class="module-header">
-            <h3>Dummy title of the module</h3>
-            <span>01</span>
-          </div>
-          <p>
-            It's a jumble of Latin words that looks like real text but is
-            intentionally nonsensical, allowing designers to focus on the
-            aesthetics.
-          </p>
+        <!--inject proposed books-->
+      </section>
+
+      <section class="__course__prop_video">
+        <div class="__course__prop_video_title">
+          <h1>Get even better</h1>
+          <p>Here is one video we recommend for this course.</p>
         </div>
-      </div>
+        <div class="__inject_prop_vd" id="__prop__vd">
+          <!--inject proposed video here-->
+        </div>
+      </section>
     </main>
 
     <div class="more-quest-wrapper">
@@ -262,10 +258,12 @@
 
     <!--Used scripts-->
 
-       <script src="assets/js/ui/common/shared-layout.js"></script>
-
+    <script src="assets/js/ui/common/shared-layout.js"></script>
 
     <script src="assets/js/ui/common/accordion-ui.js"></script>
+
+    <script src="assets/js/data/books.js"></script>
+    <script src="assets/js/data/videos.js"></script>
 
     <script src="assets/js/data/categories.js"></script>
 
