--- a/index.html
+++ b/index.html
@@ -42,16 +42,18 @@
       <div class="intro-slider">
         <div class="intro-item">
           <div class="image-wrapper">
-            <img src="assets/images/cover-18.jpg" />
+            <img
+              src="assets/images/thumbnails/joshua-reddekopp-GkFQEOubrCo-unsplash.jpg"
+            />
           </div>
-          <p>From Basics to Pro Skills</p>
+          <p>Your Informatics Learning Hub</p>
         </div>
 
         <div class="intro-item">
           <div class="image-wrapper">
-            <img src="assets/images/cover-30.jpg" />
+            <img src="assets/images/thumbnails/cover-20.jpg" />
           </div>
-          <p>Your Informatics Learning Hub</p>
+          <p>From Basics to Pro Skills</p>
         </div>
 
         <div class="intro-item">
@@ -63,14 +65,14 @@
 
         <div class="intro-item">
           <div class="image-wrapper">
-            <img src="assets/images/cover-10.jpg" alt="" />
+            <img src="assets/images/thumbnails/cover-10.jpg" alt="" />
           </div>
           <p>Build Real Tech Skills</p>
         </div>
 
         <div class="intro-item">
           <div class="image-wrapper">
-            <img src="assets/images/cover-6.jpeg" />
+            <img src="assets/images/thumbnails/cover-6.jpeg" />
           </div>
 
           <p>Become programming expert</p>
@@ -467,8 +469,6 @@
     <!--Used scripts-->
 
     <!-- COMMON UI -->
-
-
 
     <script src="assets/js/ui/common/accordion-ui.js"></script>
     <script src="assets/js/ui/common/card-carousel-drag.js"></script>
