--- a/team.html
+++ b/team.html
@@ -60,24 +60,24 @@
         <div class="team-personal-info">
           <div class="team-info-box">
             <h3>Our team members</h3>
-            <p>Below you can find our details and ways to get in touch.</p>
+            <p>Below you can find our details.</p>
           </div>
 
           <div class="line"></div>
           <div class="team-info-box">
             <h3>Napoleon Haralampidis</h3>
-            <h4>AΜ: 33333333</h4>
-            <h4>p3333333@aueb.gr</h4>
-            <h4>Study Year: 4o</h4>
+            <h4>AΜ: 3220225</h4>
+            <h4>p3220225@aueb.gr</h4>
+            <h4>Study Year: 4th</h4>
           </div>
 
           <div class="line"></div>
 
           <div class="team-info-box">
             <h3>Eleni Tzeliou</h3>
-            <h4>AM: 33333333</h4>
-            <h4>Email: p333220@aueb.gr</h4>
-            <h4>Study Year: 4o</h4>
+            <h4>AM: 3220200</h4>
+            <h4>Email: p3220200@aueb.gr</h4>
+            <h4>Study Year: 4th</h4>
           </div>
         </div>
       </div>
