--- a/team.html
+++ b/team.html
@@ -36,8 +36,12 @@
       </div>
       <div class="team-people-row">
         <div class="line"></div>
-        <div class="person"></div>
-        <div class="person"></div>
+        <div class="person">
+          <img src="assets/images/tzeliou.jpg" alt="" />
+        </div>
+        <div class="person">
+          <img src="assets/images/haralampidis.jpg" alt="" />
+        </div>
 
         <div class="line"></div>
       </div>
@@ -87,7 +91,10 @@
           <img src="assets/images/image-team-1.jpg" alt="" />
         </div>
         <div class="team-pres-img-box">
-          <img src="assets/images/thumbnails/programming-cover-small.jpg" alt="" />
+          <img
+            src="assets/images/thumbnails/programming-cover-small.jpg"
+            alt=""
+          />
         </div>
       </div>
     </section>
@@ -127,7 +134,6 @@
     <!--Used scripts-->
 
     <script src="assets/js/ui/common/shared-layout.js"></script>
-
 
     <script src="assets/js/data/categories.js"></script>
 
