--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>InfoHub | Home Page</title>
 
-    <link rel="stylesheet" href="assets/css/component.css" />
     <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/components.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/layout.css" />
 
@@ -87,11 +87,11 @@
         <p class="reveal-up">
           We bring together structured learning and curated resources to help
           Informatics students grow with confidence. Our platform focuses on
-          real skills—from programming and networks to cybersecurity, databases,
-          web development, and AI—aligned with academic needs and modern
-          industry practices. Whether you’re revising for exams or building your
-          portfolio, you’ll find clear guidance and materials to help you move
-          forward.
+          real skills - from programming and networks to cybersecurity,
+          databases, web development, and AI - aligned with academic needs and
+          modern industry practices. Whether you’re revising for exams or
+          building your portfolio, you’ll find clear guidance and materials to
+          help you move forward.
         </p>
       </div>
 
