--- a/register.html
+++ b/register.html
@@ -6,8 +6,8 @@
     <title>Register</title>
 
     <!-- Shared styles -->
-    <link rel="stylesheet" href="assets/css/component.css" />
     <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/components.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/layout.css" />
 
@@ -104,7 +104,7 @@
 
         <div class="form-column">
           <fieldset class="goals-fieldset">
-           <label for="goal" class="goal-label">You Goal is:</label>
+            <label for="goal" class="goal-label">You Goal is:</label>
 
             <label class="radio-row">
               <input type="radio" name="goal" value="exam-prep" required />
@@ -137,7 +137,7 @@
       </form>
     </main>
 
-    <!-- SUMMARY POPUP -->
+    <!-- SUMMARY POPUP 
     <div id="summary-modal" class="modal-overlay">
       <div class="modal-content">
         <span id="summary-close" class="modal-close">&times;</span>
@@ -149,13 +149,13 @@
           Confirm Registration
         </button>
       </div>
-    </div>
+    </div>-->
 
     <!--Footer -->
     <footer id="site-footer"></footer>
     <!--Used scripts-->
     <script src="assets/js/ui/common/shared-layout.js"></script>
-
+    <script src="assets/js/ui/common/modal.js"></script>
     <script src="assets/js/forms/register-form.js"></script>
 
     <script src="assets/js/data/categories.js"></script>
