--- a/team.html
+++ b/team.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Team Page</title>
 
-    <link rel="stylesheet" href="assets/css/component.css" />
     <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/components.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/layout.css" />
     <link
@@ -71,7 +71,7 @@
           <div class="team-info-box">
             <h3>Napoleon Haralampidis</h3>
             <h4>AΜ: 3220225</h4>
-            <h4>p3220225@aueb.gr</h4>
+            <h4>Email: p3220225@aueb.gr</h4>
             <h4>Study Year: 4th</h4>
           </div>
 
