--- a/videos.html
+++ b/videos.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video List Page</title>
 
-    <link rel="stylesheet" href="assets/css/component.css" />
     <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/components.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/layout.css" />
     <link
@@ -272,7 +272,6 @@
 
     <script src="assets/js/ui/common/shared-layout.js"></script>
 
-
     <script src="assets/js/ui/common/menu-filters.js"></script>
 
     <!-- DATA -->
@@ -282,7 +281,6 @@
 
     <!-- PAGE -->
     <script src="assets/js/ui/pages/videos.js"></script>
-
 
     <!-- APP orchestrator LAST -->
     <script src="assets/js/app.js"></script>
