--- a/books.html
+++ b/books.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Details Page</title>
 
-    <link rel="stylesheet" href="assets/css/component.css" />
     <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/components.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/layout.css" />
 
@@ -282,9 +282,7 @@
     <!--Used scripts-->
 
     <!-- COMMON UI -->
-       <script src="assets/js/ui/common/shared-layout.js"></script>
-
-
+    <script src="assets/js/ui/common/shared-layout.js"></script>
 
     <script src="assets/js/ui/common/menu-filters.js"></script>
 
