Update Part A: filters, modals, data fixes, responsive tweaks

--- a/book-details.html
+++ b/book-details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book Details page</title>
+    <title>InfoHub | Book Details Page</title>
 
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/components.css" />
@@ -58,14 +58,13 @@
 
      <!--Footer -->
     <footer id="site-footer"></footer>
+
+
     <!--Used scripts-->
     <script src="assets/js/ui/common/shared-layout.js"></script>
-
     <script src="assets/js/data/categories.js"></script>
     <script src="assets/js/data/books.js"></script>
-
     <script src="assets/js/ui/pages/book-details.js"></script>
-
     <script src="assets/js/app.js"></script>
   </body>
 </html>
