--- a/books.html
+++ b/books.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book Details Page</title>
+    <title>InfoHub | Book List</title>
 
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/components.css" />
@@ -130,12 +130,12 @@
             <div class="checkbox-wrapper">
               <input
                 class="inp-cbx"
-                id="cat-security"
+                id="cat-cybersecurity"
                 type="checkbox"
                 name="filter-category"
-                value="security"
+                value="cybersecurity"
               />
-              <label class="cbx" for="cat-security">
+              <label class="cbx" for="cat-cybersecurity">
                 <span>
                   <svg width="12" height="10" viewBox="0 0 12 10">
                     <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
@@ -279,20 +279,16 @@
 
     <!--Footer -->
     <footer id="site-footer"></footer>
-    <!--Used scripts-->
 
+    <!--Used scripts-->
     <!-- COMMON UI -->
     <script src="assets/js/ui/common/shared-layout.js"></script>
-
     <script src="assets/js/ui/common/menu-filters.js"></script>
-
     <!-- DATA -->
     <script src="assets/js/data/categories.js"></script>
     <script src="assets/js/ui/common/card-carousel-drag.js"></script>
-
     <script src="assets/js/data/books.js"></script>
     <script src="assets/js/ui/prefered/prefered-books.js"></script>
-
     <!-- PAGE -->
     <script src="assets/js/ui/pages/books.js"></script>
 
