--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Video List Page</title>
+    <title>InfoHub | Video List</title>
 
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/components.css" />
@@ -117,12 +117,12 @@
             <div class="checkbox-wrapper">
               <input
                 class="inp-cbx"
-                id="cat-security"
+                id="cat-cybersecurity"
                 type="checkbox"
                 name="filter-category"
-                value="security"
+                value="cybersecurity"
               />
-              <label class="cbx" for="cat-security">
+              <label class="cbx" for="cat-cybersecurity">
                 <span>
                   <svg width="12" height="10" viewBox="0 0 12 10">
                     <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
